Update day because; oh my God what am I doing??

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "name": "(gdb) Launch",
             "preLaunchTask": "makeFile",
+            "miDebuggerPath": "/usr/bin/gdb",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/build/Florida",    
+            "program": "${workspaceRoot}/build/main",
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
