--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.22)
-project(Florida)
+project(main)
 
 file(GLOB_RECURSE FLEXER_SOURCE Lexer/*.cpp)
-add_executable(Florida main.cpp ${FLEXER_SOURCE})
-target_include_directories(Florida PUBLIC Lexer/)
+add_executable(main main.cpp ${FLEXER_SOURCE})
+target_include_directories(main PUBLIC Lexer/)
