--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,14 @@
         "iosfwd": "cpp",
         "*.tcc": "cpp",
         "string": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "fstream": "cpp",
+        "array": "cpp",
+        "memory": "cpp",
+        "istream": "cpp",
+        "functional": "cpp",
+        "tuple": "cpp",
+        "utility": "cpp"
     },
     "cmake.configureOnOpen": true
 }
