Ffs, I can't figure out how to set up the Make files properly. I dunno what to edit.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "miDebuggerPath": "/usr/bin/gdb",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/build/main",
+            "program": "${workspaceRoot}/main",
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
