I haven't pushed in so long, here's a push for now. I dunno if anything works.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,7 +49,14 @@
         "typeinfo": "cpp",
         "chrono": "cpp",
         "ctime": "cpp",
-        "ratio": "cpp"
+        "ratio": "cpp",
+        "charconv": "cpp",
+        "optional": "cpp",
+        "format": "cpp",
+        "iomanip": "cpp",
+        "span": "cpp",
+        "sstream": "cpp",
+        "variant": "cpp"
     },
     "cmake.configureOnOpen": true
 }
