for loops, if else, and while loops work...I hope.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,6 +23,7 @@
                     "${fileDirname}/main",
                     "${fileDirname}/Lexer/*.cpp",
                     "${fileDirname}/Parser/*.cpp",
+                    "${fileDirname}/VirtualMachine/*.cpp",
                     "-Wall",
                     "-Werror",
                     "-Wpedantic",
